--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.0",
+    "file-type": "^21.3.0",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.23.25",
